Passing all of the retrieve by a particular user tests